Include cqadm and restructure cfgs a little.

--- a/cfgs/rabbitmq.cfg
+++ b/cfgs/rabbitmq.cfg
@@ -2,8 +2,11 @@
 # Requires Erlang
 
 [buildout]
-parts +=
+# celery.cfg is used for the version pins
+extends = celery.cfg
+rabbitmq-parts =
     rabbitmq
+    camqadm
 
 [versions]
 rod.recipe.rabbitmq = 1.1.6
@@ -14,3 +17,8 @@ rabbitmq = http://www.rabbitmq.com/releases/rabbitmq-server/v2.4.0/rabbitmq-serv
 recipe = rod.recipe.rabbitmq
 url = ${versions:rabbitmq}
 cookie = intranett-celery
+
+[camqadm]
+recipe = zc.recipe.egg
+eggs = celery
+scripts = camqadm
