Use our own version of the rabbitmq recipe (and point to the source for mr.developer)

--- a/cfgs/rabbitmq.cfg
+++ b/cfgs/rabbitmq.cfg
@@ -9,9 +9,12 @@ rabbitmq-parts =
     camqadm
 
 [versions]
-rod.recipe.rabbitmq = 1.1.6
+rod.recipe.rabbitmq = 2.0.0jarn1
 
 rabbitmq = http://www.rabbitmq.com/releases/rabbitmq-server/v2.4.0/rabbitmq-server-2.4.0.tar.gz
+
+[sources]
+rod.recipe.rabbitmq = git git@github.com:mjpieters/rod.recipe.rabbitmq.git
 
 [rabbitmq]
 recipe = rod.recipe.rabbitmq
