Configure rabbitmq, skeleton cluster conf and develop against localhost only

--- a/cfgs/rabbitmq.cfg
+++ b/cfgs/rabbitmq.cfg
@@ -4,6 +4,7 @@
 [buildout]
 rabbitmq-parts =
     rabbitmq
+    rabbitmq-conf
 
 [versions]
 rod.recipe.rabbitmq = 2.0.0jarn1
@@ -17,3 +18,14 @@ rod.recipe.rabbitmq = git git@github.com:mjpieters/rod.recipe.rabbitmq.git
 recipe = rod.recipe.rabbitmq
 url = ${versions:rabbitmq}
 cookie = intranett-celery
+
+[rabbitmq-conf]
+recipe = collective.recipe.template
+input = inline:
+    [
+        {rabbit, [
+            {cluster_nodes,[]},
+        ]},
+    ].
+    
+output = ${buildout:directory}/etc/rabbitmq.conf
