--- a/development-w-celery.cfg
+++ b/development-w-celery.cfg
@@ -5,3 +5,12 @@ extends =
 
 parts +=
     ${buildout:rabbitmq-parts}
+    rabbitmq-env
+
+[rabbitmq-env]
+recipe = collective.recipe.template
+input = inline:
+    # On development machines, we only accept connections on localhost
+    NODE_IP_ADDRESS=localhost
+    
+output = ${buildout:directory}/etc/rabbitmq-env.conf
