Celery worker daemon configuration

--- a/cfgs/celery.cfg
+++ b/cfgs/celery.cfg
@@ -1,6 +1,7 @@
 [buildout]
 celery-parts =
     celeryd
+    celeryd-conf
 
 [versions]
 amqplib = 0.6.1
@@ -10,9 +11,39 @@ importlib = 1.0.2
 kombu = 1.0.6
 pyparsing = 1.5.5
 
+[celery]
+# Only holds configuration
+user = celery
+password = Uv3thoof
+vhost = /intranett.no
+host = rabbitmq.intranett.no
+port = 5672
+
 [celeryd]
 recipe = zc.recipe.egg
-eggs = celery
+eggs =
+    celery
 scripts =
     celeryd
-    celeryev
+extra-paths = ${celeryd-conf:path}
+initialization =
+    sys.argv = sys.argv[:] + [
+        '--statedb',       '${buildout:directory}/var/celeryd_state',
+        # Restart worker every so often to preserve memory
+        '--maxtasksperchild', '10',
+    ]
+
+[celeryd-conf]
+recipe = collective.recipe.template
+path = ${buildout:parts-directory}/celeryd-conf
+input = inline:
+    BROKER_HOST =     '${celery:host}'
+    BROKER_PORT =     '${celery:port}'
+    BROKER_USER =     '${celery:user}'
+    BROKER_PASSWORD = '${celery:password}'
+    BROKER_VHOST =    '${celery:vhost}'
+    # All our tasks are async; we do not expect a result via messaging
+    CELERY_IGNORE_RESULT = True
+    # Safe ourselves the overhead of rate limiting
+    CELERY_DISABLE_RATE_LIMITS = True
+output = ${:path}/celeryconfig.py
