--- a/development-w-celery.cfg
+++ b/development-w-celery.cfg
@@ -2,10 +2,19 @@
 extends = 
     development.cfg
     cfgs/rabbitmq.cfg
+    cfgs/celery.cfg
 
 parts +=
     ${buildout:rabbitmq-parts}
+    ${buildout:celery-parts}
     rabbitmq-env
+
+[celery]
+# Default rabbit setup
+host = localhost
+user = guest
+password = guest
+vhost = /
 
 [rabbitmq-env]
 recipe = collective.recipe.template
