Start a new package for Plone-Celery integration

--- a/cfgs/sources.cfg
+++ b/cfgs/sources.cfg
@@ -2,6 +2,7 @@
 intranett.policy = fs intranett.policy
 intranett.theme = fs intranett.theme
 jarn.extranet = fs jarn.extranet
+plone.app.celery = fs plone.app.celery
 Products.Extropy = fs Products.Extropy
 Products.Invoice = fs Products.Invoice
 collective.ATClamAV = git git@github.com:ggozad/collective.ATClamAV.git
