Activate and include the p.a.celery package.

--- a/development-w-celery.cfg
+++ b/development-w-celery.cfg
@@ -9,6 +9,11 @@ parts +=
     ${buildout:celery-parts}
     rabbitmq-env
 
+auto-develop += plone.app.celery
+
+[instance-base]
+eggs += plone.app.celery
+
 [celery]
 # Default rabbit setup
 host = localhost
