Use the plone.app.celery egg and configure Celery through ZConfig

--- a/cfgs/celery.cfg
+++ b/cfgs/celery.cfg
@@ -47,3 +47,20 @@ input = inline:
     # Safe ourselves the overhead of rate limiting
     CELERY_DISABLE_RATE_LIMITS = True
 output = ${:path}/celeryconfig.py
+
+[instance-base]
+zope-conf-additional +=
+    %import plone.app.celery
+    <celery-config celery>
+        <broker>
+            host     ${celery:host}
+            port     ${celery:port}
+            user     ${celery:user}
+            password ${celery:password}
+            vhost    ${celery:vhost}
+        </broker>
+        <celery>
+            ignore-result True
+            disable-rate-limits True
+        </celery>
+    </celery-config>
