--- a/development-w-celery.cfg
+++ b/development-w-celery.cfg
@@ -9,10 +9,12 @@ parts +=
     ${buildout:celery-parts}
     rabbitmq-env
 
-auto-develop += plone.app.celery
+auto-develop += 
+    plone.app.celery
 
 [instance-base]
-eggs += plone.app.celery
+eggs +=
+    plone.app.celery
 
 [celery]
 # Default rabbit setup
