--- a/cfgs/rabbitmq.cfg
+++ b/cfgs/rabbitmq.cfg
@@ -7,12 +7,8 @@ rabbitmq-parts =
     rabbitmq-conf
 
 [versions]
-rod.recipe.rabbitmq = 2.0.0jarn1
-
-rabbitmq = http://www.rabbitmq.com/releases/rabbitmq-server/v2.4.0/rabbitmq-server-2.4.0.tar.gz
-
-[sources]
-rod.recipe.rabbitmq = git git@github.com:mjpieters/rod.recipe.rabbitmq.git
+rod.recipe.rabbitmq = 2.0.0
+rabbitmq = http://www.rabbitmq.com/releases/rabbitmq-server/v2.4.0/rabbitmq-server-2.4.1.tar.gz
 
 [rabbitmq]
 recipe = rod.recipe.rabbitmq
