initial import of intranett.task

--- a/cfgs/sources.cfg
+++ b/cfgs/sources.cfg
@@ -2,6 +2,7 @@
 intranett.policy = fs intranett.policy
 intranett.theme = fs intranett.theme
 intranett.tour = fs intranett.tour
+intranett.task = fs intranett.task
 jarn.extranet = fs jarn.extranet
 Products.Extropy = fs Products.Extropy
 Products.Invoice = fs Products.Invoice
