--- a/development.cfg
+++ b/development.cfg
@@ -28,6 +28,7 @@ auto-checkout =
     intranett.policy
     intranett.theme
     intranett.tour
+    intranett.task
 
 prod-environment +=
     CHAMELEON_RELOAD true
