--- a/jarn.cfg
+++ b/jarn.cfg
@@ -11,6 +11,7 @@ develop =
     src/intranett.policy
     src/intranett.theme
     src/intranett.tour
+    src/intranett.task
     src/jarn.extranet
     src/Products.Extropy
     src/Products.Invoice
