--- a/cfgs/versions.cfg
+++ b/cfgs/versions.cfg
@@ -51,6 +51,11 @@ superlance = 0.5
 supervisor = 3.0a10
 z3c.recipe.usercrontab = 1.1
 zc.recipe.cmmi = 1.3.4
+mantrid = 1.0.2
+eventlet = 0.9.16
+httplib2 = 0.6.0
+greenlet = 0.3.1
+
 
 ## Add-ons
 archetypes.markerfield = 1.0
