add nginx config and do manual checks for what plone id to use

--- a/frontend01.cfg
+++ b/frontend01.cfg
@@ -7,6 +7,7 @@ extends =
 parts =
     mantrid
     mantrid-conf
+    supervisor-conf
     supervisor
     supervisor-conf
 
@@ -29,7 +30,6 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/templates/nginx.conf
 output = ${buildout:directory}/nginx-sites/jarn.conf
 ip-address = ${env:INTRANETT_ZOPE_IP}
-ploneid = ${env:INTRANETT_PLONE_ID}
 
 
 
