--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -74,7 +74,14 @@ server {
     }
 
     location / {
-      rewrite ^(.*)$ /VirtualHostBase/https/$host:443/${nginx-conf:ploneid}/VirtualHostRoot$1 break;
+
+        if ($host == jarn.intranett.no){
+            rewrite ^(.*)$ /VirtualHostBase/https/$host:443/intranet.psol/VirtualHostRoot$1 break; 
+        }
+        else{
+            rewrite ^(.*)$ /VirtualHostBase/https/$host:443/Plone/VirtualHostRoot$1 break;      
+        }
+
       proxy_pass http://127.0.0.1:8080;
     }
 }
