fixed supervisor config

--- a/templates/supervisord-frontend.conf
+++ b/templates/supervisord-frontend.conf
@@ -21,18 +21,10 @@ minprocs=200                ; (min. avail process descriptors;default 200)
 directory=%(here)s
 
 
-[program:haproxy]
-command = ${buildout:bin-directory}/haproxy -c %(here)s/haproxy.cfg -db
+[program:mantrid]
+command = ${buildout:bin-directory}/mantrid -c  ${buildout:directory}/etc/mantrid.conf
 autostart= true
 autorestart = true
 redirect_stderr = true
 priority = 101
-
-[program:varnish]
-command = ${buildout:bin-directory}/varnish
-startretries = 5
-redirect_stderr = true
-autostart = true
-autorestart = true
-priority = 102
 
