--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -75,12 +75,12 @@ server {
 
     location / {
 
-        if ($host == jarn.intranett.no){
+        if ($host = jarn.intranett.no){
             rewrite ^(.*)$ /VirtualHostBase/https/$host:443/intranet.psol/VirtualHostRoot$1 break; 
         }
-        else{
-            rewrite ^(.*)$ /VirtualHostBase/https/$host:443/Plone/VirtualHostRoot$1 break;      
-        }
+        
+        rewrite ^(.*)$ /VirtualHostBase/https/$host:443/Plone/VirtualHostRoot$1 break;      
+
 
       proxy_pass http://127.0.0.1:8080;
     }
