add host header so the load balancer can get correct info

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -74,14 +74,14 @@ server {
     }
 
     location / {
-
+        
         if ($host = jarn.intranett.no){
             rewrite ^(.*)$ /VirtualHostBase/https/$host:443/intranet.psol/VirtualHostRoot$1 break; 
         }
         
         rewrite ^(.*)$ /VirtualHostBase/https/$host:443/Plone/VirtualHostRoot$1 break;      
 
-
+      proxy_set_header  Host  $host;
       proxy_pass http://127.0.0.1:8080;
     }
 }
