Update buildout and add makefile

--- a/cfgs/nginx.cfg
+++ b/cfgs/nginx.cfg
@@ -31,3 +31,14 @@ input = ${buildout:directory}/templates/nginx.conf
 output = ${buildout:directory}/nginx-sites/jarn.conf
 ip-address = ${env:INTRANETT_ZOPE_IP}
 ploneid = ${env:INTRANETT_PLONE_ID}
+
+[nginx-supervisor]
+autostart = true
+name = nginx
+program =
+    [program:${:name}]
+    command = ${buildout:directory}/parts/nginx/sbin/nginx -c ${buildout:directory}/etc/nginx.conf
+    autostart = ${:autostart}
+    autorestart = true
+    redirect_stderr = true
+    priority = 200
