--- a/development.cfg
+++ b/development.cfg
@@ -19,6 +19,7 @@ development-parts =
     checkversions
     coverage
     report
+    mr.laforge
     report-html
 
 parts =
@@ -40,15 +41,11 @@ eggs = ZODB3
 scripts = repozo
 
 [ejabberd]
-erlang-path = /opt/local/bin
+erlang-path = /usr/local/bin
 
-[supervisor-conf]
-input = ${buildout:directory}/templates/supervisord-dev.conf
-
-[test-supervisor-conf]
-<= supervisor-conf
-input = ${buildout:directory}/templates/supervisord-test.conf
-output = ${buildout:directory}/etc/supervisord-test.conf
+[mr.laforge]
+recipe = zc.recipe.egg
+eggs = mr.laforge
 
 [nginx-conf]
 input = ${buildout:directory}/templates/nginx-dev.conf
@@ -61,6 +58,7 @@ ploneid = Plone
 [instance-base]
 eggs +=
     Products.DocFinderTab
+    mr.laforge
     plone.reload
 
 [instance]
@@ -68,6 +66,20 @@ eggs +=
 http-address = 8081
 user = admin:admin
 verbose-security = on
+
+[instance-supervisor]
+autostart = true
+name = instance
+program =
+    [program:${:name}]
+    command = ${buildout:bin-directory}/instance console
+    startretries = 5
+    redirect_stderr = true
+    autostart = ${:autostart}
+    autorestart = true
+    priority = 300
+
+
 
 [atct_conf]
 recipe = plone.recipe.command
@@ -95,6 +107,29 @@ scripts = debugsmtp
 initialization =
     sys.argv[1:] = ['-n', '-c', 'DebuggingServer', 'localhost:8025']
 arguments = 'smtpd', run_name='__main__', alter_sys=True
+
+[debugsmtp-supervisor]
+autostart = true
+name = debugsmtp
+program =
+    [program:${:name}]
+    command = ${buildout:bin-directory}/debugsmtp
+    autostart = ${:autostart}
+    autorestart = true
+
+
+[test-supervisor-conf]
+<= supervisor-conf
+input = ${buildout:directory}/templates/supervisord-test.conf
+output = ${buildout:directory}/etc/supervisord-test.conf
+
+[supervisor-conf]
+programs =
+    ${ejabberd-supervisor:program}
+    ${instance-supervisor:program}
+    ${nginx-supervisor:program}
+    ${debugsmtp-supervisor:program}
+
 
 [omelette]
 recipe = collective.recipe.omelette
