--- a/cfgs/base.cfg
+++ b/cfgs/base.cfg
@@ -4,6 +4,7 @@ extends =
     versions.cfg
     memcached.cfg
     ejabberd.cfg
+    supervisor.cfg
     nginx.cfg
 
 allow-picked-versions = false
@@ -21,10 +22,6 @@ allow-hosts =
 base-parts =
     backup
     zopepy
-
-supervisor-parts =
-    supervisor
-    supervisor-conf
 
 varnish-parts =
     varnish-build
@@ -80,17 +77,6 @@ recipe = gocept.recipe.env
 [grp]
 recipe = collective.recipe.grp
 
-
-[supervisor]
-recipe = zc.recipe.egg
-eggs =
-    supervisor
-    superlance
-
-[supervisor-conf]
-recipe = collective.recipe.template
-input = ${buildout:directory}/templates/supervisord.conf
-output = ${buildout:directory}/etc/supervisord.conf
 
 [varnish-build]
 recipe = zc.recipe.cmmi
