--- a/cfgs/ejabberd.cfg
+++ b/cfgs/ejabberd.cfg
@@ -10,7 +10,7 @@ ejabberd-parts =
 [ejabberd]
 recipe = rod.recipe.ejabberd
 erlang-path = /usr/bin
-url = http://dist.jarn.com/public/ejabberd-2.1.9.tar.gz
+url = http://www.process-one.net/downloads/ejabberd/2.1.10/ejabberd-2.1.10.tar.gz
 
 [ejabberd-conf]
 recipe = collective.recipe.template
@@ -47,3 +47,16 @@ output = ${buildout:bin-directory}/ejabberd-backup
 input = inline:
     #!/bin/bash
     ${buildout:bin-directory}/ejabberdctl backup ${buildout:directory}/var/backups/ejabberd.bak
+    
+[ejabberd-supervisor]
+autostart = true
+name = ejabberd
+program =
+    [program:${:name}]
+    command = ${buildout:bin-directory}/ejabberd
+    startretries = 5
+    redirect_stderr = true
+    autostart = ${:autostart}
+    autorestart = true
+    priority = 100
+    
