--- a/cfgs/versions.cfg
+++ b/cfgs/versions.cfg
@@ -47,6 +47,7 @@ pas.plugins.userdeletedevent = 0.1
 plone.recipe.command = 1.1
 plone.recipe.haproxy = 1.1.1
 plone.recipe.varnish = 1.2.1
+mr.laforge = 0.6
 psycopg2 = 2.4.2
 rod.recipe.ejabberd = 1.1.4
 superlance = 0.5
