--- a/cfgs/versions.cfg
+++ b/cfgs/versions.cfg
@@ -104,3 +104,7 @@ z3c.jbot = 0.6.3
 z3c.blobfile = 0.1.5
 z3c.pt = 2.1.5
 z3c.unconfigure = 1.0.1
+collective.flowplayer = 3.1.1
+hachoir-parser = 1.3.4 
+hachoir-metadata = 1.3.3
+hachoir-core = 1.3.3
