updated pack and removed zeo

--- a/templates/pack.conf
+++ b/templates/pack.conf
@@ -3,6 +3,6 @@
     blob-dir {buildout_directory}/var/blobcache/{name}
     blob-cache-size 10mb
     <postgresql>
-        dsn dbname='{name}' user='zodbuser' host='localhost' password='KCn25qUDfRoO}aVn'
+        dsn dbname='{name}' user='{name}' host='localhost' password='{password}'
     </postgresql>
 </relstorage>
