--- a/production.cfg
+++ b/production.cfg
@@ -5,7 +5,6 @@ extends =
 prod-parts =
     env
     grp
-    zeo
     instance1
     instance2
     atct_conf
@@ -39,17 +38,6 @@ develop =
     src/intranett.tour
 
 
-[zeo]
-recipe = plone.recipe.zeoserver
-zeo-address = 127.0.0.1:8001
-blob-storage = ${buildout:directory}/var/blobstorage
-authentication-realm = intranett
-authentication-database = ${buildout:directory}/etc/auth.db
-pack-days = 7
-pack-keep-old = false
-pack-user = zeointranett
-pack-password = FuGwjSm32eCaOX
-
 [backup-cronjob]
 recipe = z3c.recipe.usercrontab
 times = 37 2 * * *
@@ -67,15 +55,26 @@ command = ${buildout:bin-directory}/zeopack
 
 [instance-base]
 user = ${credentials:zope-user}
-zeo-client = True
-zeo-address = ${zeo:zeo-address}
-zeo-realm = ${zeo:authentication-realm}
-blob-storage = ${zeo:blob-storage}
-shared-blob = on
-zeo-username = zeointranett
-zeo-password = FuGwjSm32eCaOX
-zserver-threads = 1
-http-fast-listen = off
+eggs += 
+    psycopg2
+    pylibmc
+zeo-client = False
+zeo-address =
+blob-storage =
+shared-blob = off
+environment-vars +=
+    LD_LIBRARY_PATH ${libmemcached:location}/lib
+rel-storage =
+    type postgresql
+    dsn dbname='{env:INTRANETT_DATABASE}' user='zodbuser' host='database01.intranett.no' password='KCn25qUDfRoO}aVn'
+    shared-blob-dir false
+    blob-dir ${buildout:directory}/var/blobcache
+    blob-cache-size 512mb
+    poll-interval 60
+    cache-local-mb 0
+    cache-prefix db1
+    cache-servers 127.0.0.1:11211
+
 environment-vars +=
     INTRANETT_PLONE_ID ${env:INTRANETT_PLONE_ID}
 mailinglogger =
@@ -84,7 +83,7 @@ mailinglogger =
     flood-level 10
     smtp-server mail.gocept.net
     from logger@intranett.no
-    to hosting@jarn.com
+    to info@blaastolen.com
     subject [intranett.no error] [%(hostname)s] %(line)s
   </mailing-logger>
 
