--- a/production.cfg
+++ b/production.cfg
@@ -30,13 +30,10 @@ parts =
     ${buildout:cron-parts}
     ${buildout:cron-parts-zeo}
     ${buildout:supervisor-parts}
-    supervisor-initd
 
 develop =
     src/intranett.policy
     src/intranett.theme
-    src/intranett.tour
-
 
 [backup-cronjob]
 recipe = z3c.recipe.usercrontab
@@ -66,7 +63,7 @@ environment-vars +=
     LD_LIBRARY_PATH ${libmemcached:location}/lib
 rel-storage =
     type postgresql
-    dsn dbname='{env:INTRANETT_DATABASE}' user='zodbuser' host='database01.intranett.no' password='KCn25qUDfRoO}aVn'
+    dsn dbname='{env:INTRANETT_DATABASE}' user='{env:INTRANETT_DB_ID}' host='pgsql01.intranett.no' password='{env:INTRANETT_DB_PASSWORD}'
     shared-blob-dir false
     blob-dir ${buildout:directory}/var/blobcache
     blob-cache-size 512mb
@@ -97,6 +94,34 @@ http-address = 127.0.0.1:${ports:instance1-http-port}
 http-port = ${ports:instance2-http-port}
 http-address = 127.0.0.1:${ports:instance2-http-port}
 
+
+[instance1-supervisor]
+autostart = true
+name = instance1
+program =
+    [program:${:name}]
+    command = ${buildout:bin-directory}/instance1 console
+    startretries = 5
+    redirect_stderr = true
+    autostart = ${:autostart}
+    autorestart = true
+    priority = 300
+
+
+[instance2-supervisor]
+autostart = true
+name = instance2
+program =
+    [program:${:name}]
+    command = ${buildout:bin-directory}/instance2 console
+    startretries = 5
+    redirect_stderr = true
+    autostart = ${:autostart}
+    autorestart = true
+    priority = 300
+
+
+
 [instance-debug]
 <= instance-base
 http-port = 8090
@@ -125,14 +150,43 @@ group = ${grp:GROUP}
 frontend-host = 127.0.0.1
 frontend-port = 8010
 
-[supervisor-initd]
-recipe = plone.recipe.command
-target = ${buildout:directory}/etc/init.d
-command =
-    [ ! -e /var/spool/init.d ] && mkdir /var/spool/init.d || echo
-    [ ! -e /var/spool/init.d/jarn ] && mkdir /var/spool/init.d/jarn || echo
-    chmod a+x ${:target}/10supervisord
-    [ ! -e /var/spool/init.d/jarn/10supervisord ] &&  ln -s ${:target}/10supervisord /var/spool/init.d/jarn/10supervisord || echo
+[haproxy-supervisor]
+autostart = true
+name = haproxy
+program =
+    [program:${:name}]
+    command = ${buildout:bin-directory}/haproxy -f %(here)s/haproxy.cfg -db
+    autostart= true
+    autorestart = true
+    redirect_stderr = true
+    priority = 101
+
+
+[varnish-supervisor]
+autostart = true
+name = varnish
+program =
+    [program:${:name}]
+    command = ${buildout:bin-directory}/varnish
+    startretries = 5
+    redirect_stderr = true
+    autostart = true
+    autorestart = true
+    priority = 102
+
+[supervisor-conf]
+programs =
+    ${haproxy-supervisor:program}
+    ${varnish-supervisor:program}
+    ${ejabberd-supervisor:program}
+    ${instance1-supervisor:program}
+    ${instance2-supervisor:program}
+
+[test-supervisor-conf]
+<= supervisor-conf
+input = ${buildout:directory}/templates/supervisord-test.conf
+output = ${buildout:directory}/etc/supervisord-test.conf
+
 
 [logrotate]
 recipe = collective.recipe.template
