--- a/production.cfg
+++ b/production.cfg
@@ -17,10 +17,8 @@ prod-parts =
 cron-parts =
     ejabberd-cronjob
     logrotate-crontab
+    startup-cronjob
 
-cron-parts-zeo =
-    backup-cronjob
-    zeopack-crontab
 
 parts =
     ${buildout:base-parts}
@@ -28,17 +26,16 @@ parts =
     ${buildout:varnish-parts}
     ${buildout:ejabberd-parts}
     ${buildout:cron-parts}
-    ${buildout:cron-parts-zeo}
     ${buildout:supervisor-parts}
 
 develop =
     src/intranett.policy
     src/intranett.theme
 
-[backup-cronjob]
+[startup-cronjob]
 recipe = z3c.recipe.usercrontab
-times = 37 2 * * *
-command = ${buildout:directory}/bin/backup --quiet
+times = @reboot
+command = ${buildout:directory}/bin/supervisord
 
 [ejabberd-cronjob]
 recipe = z3c.recipe.usercrontab
@@ -125,7 +122,7 @@ program =
 [instance-debug]
 <= instance-base
 http-port = 8090
-http-address = 127.0.0.1:8090
+http-address = 8090
 verbose-security = on
 
 [atct_conf]
