add reboot cronjob

--- a/production.cfg
+++ b/production.cfg
@@ -17,7 +17,7 @@ prod-parts =
 cron-parts =
     ejabberd-cronjob
     logrotate-crontab
-    startup-cronjob
+    supervisor-crontab
 
 
 parts =
@@ -32,10 +32,10 @@ develop =
     src/intranett.policy
     src/intranett.theme
 
-[startup-cronjob]
+[supervisor-crontab]
 recipe = z3c.recipe.usercrontab
 times = @reboot
-command = ${buildout:directory}/bin/supervisord
+command = ${buildout:bin-directory}/supervisord -c ${buildout:directory}/etc/supervisord.conf
 
 [ejabberd-cronjob]
 recipe = z3c.recipe.usercrontab
