--- a/production.cfg
+++ b/production.cfg
@@ -159,17 +159,12 @@ program =
     priority = 101
 
 
-[varnish-supervisor]
-autostart = true
-name = varnish
+[zope-supervisor]
+name = zope
 program =
-    [program:${:name}]
-    command = ${buildout:bin-directory}/varnish
-    startretries = 5
-    redirect_stderr = true
-    autostart = true
-    autorestart = true
-    priority = 102
+    [group:${:name}]
+    programs = instance1,instance2
+    priority = 210
 
 [supervisor-conf]
 programs =
@@ -178,6 +173,7 @@ programs =
     ${ejabberd-supervisor:program}
     ${instance1-supervisor:program}
     ${instance2-supervisor:program}
+    ${zope-supervisor:program}
 
 [test-supervisor-conf]
 <= supervisor-conf
