--- a/production.cfg
+++ b/production.cfg
@@ -159,13 +159,26 @@ program =
     priority = 101
 
 
+[varnish-supervisor]
+autostart = true
+name = varnish
+program =
+    [program:${:name}]
+    command = ${buildout:bin-directory}/varnish
+    startretries = 5
+    redirect_stderr = true
+    autostart = true
+    autorestart = true
+    priority = 102
+
 [zope-supervisor]
+autostart = true
 name = zope
 program =
     [group:${:name}]
     programs = instance1,instance2
     priority = 210
-
+    
 [supervisor-conf]
 programs =
     ${haproxy-supervisor:program}
@@ -173,7 +186,7 @@ programs =
     ${ejabberd-supervisor:program}
     ${instance1-supervisor:program}
     ${instance2-supervisor:program}
-    ${zope-supervisor:program}
+    ${zope-supervisor:program}    
 
 [test-supervisor-conf]
 <= supervisor-conf
