remove ejabberd parts and fix dbpassword and ejabberd sentral host and password

--- a/production.cfg
+++ b/production.cfg
@@ -15,7 +15,6 @@ prod-parts =
     logrotate
 
 cron-parts =
-    ejabberd-cronjob
     logrotate-crontab
     supervisor-crontab
 
@@ -24,7 +23,6 @@ parts =
     ${buildout:base-parts}
     ${buildout:prod-parts}
     ${buildout:varnish-parts}
-    ${buildout:ejabberd-parts}
     ${buildout:cron-parts}
     ${buildout:supervisor-parts}
 
@@ -37,15 +35,10 @@ recipe = z3c.recipe.usercrontab
 times = @reboot
 command = ${buildout:bin-directory}/supervisord -c ${buildout:directory}/etc/supervisord.conf
 
-[ejabberd-cronjob]
-recipe = z3c.recipe.usercrontab
-times = 17 2 * * *
-command = ${buildout:directory}/bin/ejabberd-backup
+[credentials]
+ejabberd-password = ${env:INTRANETT_DB_PASSWORD}
+ejabberd-domain = ${env:INTRANETT_DB_ID}.intranett.no
 
-[zeopack-crontab]
-recipe = z3c.recipe.usercrontab
-times = 47 1 * * *
-command = ${buildout:bin-directory}/zeopack
 
 [instance-base]
 user = ${credentials:zope-user}
@@ -60,7 +53,7 @@ environment-vars +=
     LD_LIBRARY_PATH ${libmemcached:location}/lib
 rel-storage =
     type postgresql
-    dsn dbname='{env:INTRANETT_DATABASE}' user='{env:INTRANETT_DB_ID}' host='pgsql01.intranett.no' password='{env:INTRANETT_DB_PASSWORD}'
+    dsn dbname='${env:INTRANETT_DATABASE}' user='${env:INTRANETT_DB_ID}' host='pgsql01.intranett.no' password='${env:INTRANETT_DB_PASSWORD}'
     shared-blob-dir false
     blob-dir ${buildout:directory}/var/blobcache
     blob-cache-size 512mb
@@ -183,7 +176,6 @@ program =
 programs =
     ${haproxy-supervisor:program}
     ${varnish-supervisor:program}
-    ${ejabberd-supervisor:program}
     ${instance1-supervisor:program}
     ${instance2-supervisor:program}
     ${zope-supervisor:program}    
