--- a/production.cfg
+++ b/production.cfg
@@ -53,7 +53,7 @@ environment-vars +=
     LD_LIBRARY_PATH ${libmemcached:location}/lib
 rel-storage =
     type postgresql
-    dsn dbname='${env:INTRANETT_DATABASE}' user='${env:INTRANETT_DB_ID}' host='pgsql01.intranett.no' password='${env:INTRANETT_DB_PASSWORD}'
+    dsn dbname='${env:INTRANETT_DB_ID}' user='${env:INTRANETT_DB_ID}' host='pgsql01.intranett.no' password='${env:INTRANETT_DB_PASSWORD}'
     shared-blob-dir false
     blob-dir ${buildout:directory}/var/blobcache
     blob-cache-size 512mb
