remove varnish and haproxy and listen to public ports, add haproxy to database server (for now)

--- a/database01.cfg
+++ b/database01.cfg
@@ -40,6 +40,8 @@ extends =
 parts =
     relpy
     pack-crontab
+    supervisor-crontab
+    supervisor-conf
 
 [relpy]
 recipe = zc.recipe.egg
@@ -51,3 +53,37 @@ eggs =
 recipe = z3c.recipe.usercrontab
 times = 47 1 * * *
 command = ${buildout:bin-directory}/zodbpack -d 14 ${buildout:directory}/etc/pack.conf > /dev/null 2>&1
+
+
+[supervisor-crontab]
+recipe = z3c.recipe.usercrontab
+times = @reboot
+command = ${buildout:bin-directory}/supervisord -c ${buildout:directory}/etc/supervisord.conf
+
+[haproxy]
+recipe = plone.recipe.haproxy
+url = http://dist.jarn.com/public/haproxy-1.4.18.zip
+
+
+
+[haproxy-supervisor]
+autostart = true
+name = haproxy
+program =
+    [program:${:name}]
+    command = ${buildout:bin-directory}/haproxy -f %(here)s/haproxy.cfg -db
+    autostart= true
+    autorestart = true
+    redirect_stderr = true
+    priority = 101
+    
+[supervisor-conf]
+recipe = collective.recipe.template
+input = ${buildout:directory}/templates/supervisord.conf
+output = ${buildout:directory}/etc/supervisord.conf
+programs =
+    ${haproxy-supervisor:program}
+
+
+
+
