--- a/production.cfg
+++ b/production.cfg
@@ -9,9 +9,6 @@ prod-parts =
     instance2
     atct_conf
     instance-debug
-    haproxy
-    haproxy-conf
-    nginx-conf
     logrotate
 
 cron-parts =
@@ -22,7 +19,6 @@ cron-parts =
 parts =
     ${buildout:base-parts}
     ${buildout:prod-parts}
-    ${buildout:varnish-parts}
     ${buildout:cron-parts}
     ${buildout:supervisor-parts}
 
@@ -68,21 +64,21 @@ mailinglogger =
   <mailing-logger>
     level error
     flood-level 10
-    smtp-server mail.gocept.net
+    smtp-server smtp.copyleft.no
     from logger@intranett.no
-    to info@blaastolen.com
+    to hosting@blaastolen.com
     subject [intranett.no error] [%(hostname)s] %(line)s
   </mailing-logger>
 
 [instance1]
 <= instance-base
 http-port = ${ports:instance1-http-port}
-http-address = 127.0.0.1:${ports:instance1-http-port}
+http-address = ${ports:instance1-http-port}
 
 [instance2]
 <= instance-base
 http-port = ${ports:instance2-http-port}
-http-address = 127.0.0.1:${ports:instance2-http-port}
+http-address = ${ports:instance2-http-port}
 
 
 [instance1-supervisor]
@@ -127,42 +123,6 @@ command = ln -s ${buildout:directory}/etc/atcontenttypes.conf ${:target1} ; ln -
 [zopepy]
 eggs = ${instance1:eggs}
 
-[haproxy]
-recipe = plone.recipe.haproxy
-url = http://dist.jarn.com/public/haproxy-1.4.18.zip
-
-[haproxy-conf]
-recipe = collective.recipe.template
-input = ${buildout:directory}/templates/haproxy.cfg
-output = ${buildout:directory}/etc/haproxy.cfg
-user = ${env:USER}
-group = ${grp:GROUP}
-frontend-host = 127.0.0.1
-frontend-port = 8010
-
-[haproxy-supervisor]
-autostart = true
-name = haproxy
-program =
-    [program:${:name}]
-    command = ${buildout:bin-directory}/haproxy -f %(here)s/haproxy.cfg -db
-    autostart= true
-    autorestart = true
-    redirect_stderr = true
-    priority = 101
-
-
-[varnish-supervisor]
-autostart = true
-name = varnish
-program =
-    [program:${:name}]
-    command = ${buildout:bin-directory}/varnish
-    startretries = 5
-    redirect_stderr = true
-    autostart = true
-    autorestart = true
-    priority = 102
 
 [zope-supervisor]
 autostart = true
@@ -174,8 +134,6 @@ program =
     
 [supervisor-conf]
 programs =
-    ${haproxy-supervisor:program}
-    ${varnish-supervisor:program}
     ${instance1-supervisor:program}
     ${instance2-supervisor:program}
     ${zope-supervisor:program}    
