--- a/templates/haproxy.cfg
+++ b/templates/haproxy.cfg
@@ -2,8 +2,8 @@
 
 global
   maxconn 100
-  user ${haproxy-conf:user}
-  group ${haproxy-conf:group}
+  user intranett
+  group intranett
   daemon
   nbproc 1
   spread-checks 3
@@ -33,22 +33,15 @@ defaults
   stats refresh 60s
   stats realm Haproxy\ statistics
 
-  errorfile 500 ${buildout:directory}/nginx-sites/errors/500.http
-  errorfile 502 ${buildout:directory}/nginx-sites/errors/500.http
-  errorfile 503 ${buildout:directory}/nginx-sites/errors/500.http
-  errorfile 504 ${buildout:directory}/nginx-sites/errors/500.http
+  #errorfile 500 /errors/500.http
+  #errorfile 502 errors/500.http
+  #errorfile 503 /errors/500.http
+  #errorfile 504 /errors/500.http
 
 frontend zopecluster
-  bind ${haproxy-conf:frontend-host}:${haproxy-conf:frontend-port}
-  default_backend back_zope
+  bind localhost:8080
+  # default_backend back_zope
 
   option httplog
   log 127.0.0.1:1514 local6
 
-backend back_zope
-  balance roundrobin
-  option httpchk GET /
-  default-server maxconn 1 rise 1
-
-  server  plone0101 127.0.0.1:${ports:instance1-http-port} check
-  server  plone0102 127.0.0.1:${ports:instance2-http-port} check
