make xmpp configurablal

--- a/templates/haproxy.cfg
+++ b/templates/haproxy.cfg
@@ -2,8 +2,8 @@
 
 global
   maxconn 100
-  user intranett
-  group intranett
+  user haproxy
+  group haproxy
   daemon
   nbproc 1
   spread-checks 3
