--- a/production.cfg
+++ b/production.cfg
@@ -64,7 +64,7 @@ mailinglogger =
   <mailing-logger>
     level error
     flood-level 10
-    smtp-server smtp.copyleft.no
+    smtp-server  mail10.copyleft.no
     from logger@intranett.no
     to hosting@blaastolen.com
     subject [intranett.no error] [%(hostname)s] %(line)s
