--- a/cfgs/versions.cfg
+++ b/cfgs/versions.cfg
@@ -108,3 +108,4 @@ collective.flowplayer = 3.1.1
 hachoir-parser = 1.3.4 
 hachoir-metadata = 1.3.3
 hachoir-core = 1.3.3
+Products.PloneHotfix20121106 = 1.2
