--- a/production.cfg
+++ b/production.cfg
@@ -8,6 +8,7 @@ prod-parts =
     instance1
     instance2
     atct_conf
+    ${buildout:memcached-parts}    
     instance-debug
     logrotate
 
@@ -46,7 +47,7 @@ zeo-address =
 blob-storage =
 shared-blob = off
 environment-vars +=
-    LD_LIBRARY_PATH ${libmemcached:location}/lib
+    LD_LIBRARY_PATH ${libjhed:location}/lib
 rel-storage =
     type postgresql
     dsn dbname='${env:INTRANETT_DB_ID}' user='${env:INTRANETT_DB_ID}' host='pgsql01.intranettlan' password='${env:INTRANETT_DB_PASSWORD}'
@@ -55,7 +56,7 @@ rel-storage =
     blob-cache-size 512mb
     poll-interval 60
     cache-local-mb 0
-    cache-prefix db1
+    cache-prefix ${env:INTRANETT_DB_ID}
     cache-servers 127.0.0.1:11211
 
 environment-vars +=
@@ -107,6 +108,17 @@ program =
     priority = 300
 
 
+[memcached-supervisor]
+autostart = true
+name = instance2
+program =
+    [program:${:name}]
+    command = %(here)s/../bin/memcached -m 64 -p 11211 -l 127.0.0.1
+    environment = LD_LIBRARY_PATH=%(here)s/../parts/libevent/lib/
+    autostart = ${:autostart}
+    autorestart = true
+    priority = 100
+
 
 [instance-debug]
 <= instance-base
@@ -134,9 +146,12 @@ program =
     
 [supervisor-conf]
 programs =
+    ${memcached-supervisor:program}
     ${instance1-supervisor:program}
     ${instance2-supervisor:program}
     ${zope-supervisor:program}    
+    
+
 
 [test-supervisor-conf]
 <= supervisor-conf
