fixed memcached supervisor

--- a/production.cfg
+++ b/production.cfg
@@ -110,7 +110,7 @@ program =
 
 [memcached-supervisor]
 autostart = true
-name = instance2
+name = memcached
 program =
     [program:${:name}]
     command = %(here)s/../bin/memcached -m 64 -p 11211 -l 127.0.0.1
