make the instances not share blobdirs

--- a/production.cfg
+++ b/production.cfg
@@ -75,12 +75,13 @@ mailinglogger =
 <= instance-base
 http-port = ${ports:instance1-http-port}
 http-address = ${ports:instance1-http-port}
+blob-dir ${buildout:directory}/var/blobcache-instance1
 
 [instance2]
 <= instance-base
 http-port = ${ports:instance2-http-port}
 http-address = ${ports:instance2-http-port}
-
+blob-dir ${buildout:directory}/var/blobcache-instance2
 
 [instance1-supervisor]
 autostart = true
