--- a/production.cfg
+++ b/production.cfg
@@ -52,7 +52,6 @@ rel-storage =
     type postgresql
     dsn dbname='${env:INTRANETT_DB_ID}' user='${env:INTRANETT_DB_ID}' host='pgsql01.intranettlan' password='${env:INTRANETT_DB_PASSWORD}'
     shared-blob-dir false
-    blob-dir ${buildout:directory}/var/blobcache
     blob-cache-size 512mb
     poll-interval 60
     cache-local-mb 0
@@ -75,13 +74,13 @@ mailinglogger =
 <= instance-base
 http-port = ${ports:instance1-http-port}
 http-address = ${ports:instance1-http-port}
-blob-dir ${buildout:directory}/var/blobcache-instance1
+rel-storage += blob-dir ${buildout:directory}/var/blobcache-instance1
 
 [instance2]
 <= instance-base
 http-port = ${ports:instance2-http-port}
 http-address = ${ports:instance2-http-port}
-blob-dir ${buildout:directory}/var/blobcache-instance2
+rel-storage += blob-dir ${buildout:directory}/var/blobcache-instance2
 
 [instance1-supervisor]
 autostart = true
