make the instances not share blobdirs

--- a/production.cfg
+++ b/production.cfg
@@ -48,16 +48,6 @@ blob-storage =
 shared-blob = off
 environment-vars +=
     LD_LIBRARY_PATH ${libjhed:location}/lib
-rel-storage =
-    type postgresql
-    dsn dbname='${env:INTRANETT_DB_ID}' user='${env:INTRANETT_DB_ID}' host='pgsql01.intranettlan' password='${env:INTRANETT_DB_PASSWORD}'
-    shared-blob-dir false
-    blob-cache-size 512mb
-    poll-interval 60
-    cache-local-mb 0
-    cache-prefix ${env:INTRANETT_DB_ID}
-    cache-servers 127.0.0.1:11211
-
 environment-vars +=
     INTRANETT_PLONE_ID ${env:INTRANETT_PLONE_ID}
 mailinglogger =
@@ -74,13 +64,34 @@ mailinglogger =
 <= instance-base
 http-port = ${ports:instance1-http-port}
 http-address = ${ports:instance1-http-port}
-rel-storage += blob-dir ${buildout:directory}/var/blobcache-instance1
+rel-storage =
+    type postgresql
+    dsn dbname='${env:INTRANETT_DB_ID}' user='${env:INTRANETT_DB_ID}' host='pgsql01.intranettlan' password='${env:INTRANETT_DB_PASSWORD}'
+    shared-blob-dir false
+    blob-cache-size 512mb
+    poll-interval 60
+    cache-local-mb 0
+    cache-prefix ${env:INTRANETT_DB_ID}
+    cache-servers 127.0.0.1:11211
+    blob-dir ${buildout:directory}/var/blobcache-instance1
+
+
 
 [instance2]
 <= instance-base
 http-port = ${ports:instance2-http-port}
 http-address = ${ports:instance2-http-port}
-rel-storage += blob-dir ${buildout:directory}/var/blobcache-instance2
+rel-storage =
+    type postgresql
+    dsn dbname='${env:INTRANETT_DB_ID}' user='${env:INTRANETT_DB_ID}' host='pgsql01.intranettlan' password='${env:INTRANETT_DB_PASSWORD}'
+    shared-blob-dir false
+    blob-cache-size 512mb
+    poll-interval 60
+    cache-local-mb 0
+    cache-prefix ${env:INTRANETT_DB_ID}
+    cache-servers 127.0.0.1:11211
+    blob-dir ${buildout:directory}/var/blobcache-instance2
+
 
 [instance1-supervisor]
 autostart = true
@@ -125,6 +136,17 @@ program =
 http-port = 8090
 http-address = 8090
 verbose-security = on
+rel-storage =
+    type postgresql
+    dsn dbname='${env:INTRANETT_DB_ID}' user='${env:INTRANETT_DB_ID}' host='pgsql01.intranettlan' password='${env:INTRANETT_DB_PASSWORD}'
+    shared-blob-dir false
+    blob-cache-size 512mb
+    poll-interval 60
+    cache-local-mb 0
+    cache-prefix ${env:INTRANETT_DB_ID}
+    cache-servers 127.0.0.1:11211
+    blob-dir ${buildout:directory}/var/blobcache-instance-debug
+
 
 [atct_conf]
 recipe = plone.recipe.command
