--- a/cfgs/base.cfg
+++ b/cfgs/base.cfg
@@ -60,6 +60,7 @@ environment-vars =
     ${buildout:prod-environment}
 eggs =
     intranett.policy
+    Products.PloneHotfix20130618
 zcml =
     intranett.policy-meta
     intranett.policy
