--- a/cfgs/versions.cfg
+++ b/cfgs/versions.cfg
@@ -109,3 +109,4 @@ hachoir-parser = 1.3.4
 hachoir-metadata = 1.3.3
 hachoir-core = 1.3.3
 Products.PloneHotfix20121106 = 1.2
+Products.PloneHotfix20130618 = 1.0
