--- a/cfgs/base.cfg
+++ b/cfgs/base.cfg
@@ -12,7 +12,6 @@ socket-timout = 5
 versions = versions
 unzip = true
 
-index = http://f.pypi.python.org/simple/
 
 allow-hosts =
     *.jarn.com
@@ -61,6 +60,7 @@ environment-vars =
 eggs =
     intranett.policy
     Products.PloneHotfix20130618
+    Products.PloneHotfix20131210
 zcml =
     intranett.policy-meta
     intranett.policy
