use system libevent

--- a/cfgs/memcached.cfg
+++ b/cfgs/memcached.cfg
@@ -1,7 +1,7 @@
 [buildout]
 
 memcached-parts =
-    libevent
+#    libevent
     memcached
     libmemcached
     pylibmc
@@ -15,9 +15,9 @@ recipe = zc.recipe.cmmi
 url = http://memcached.googlecode.com/files/memcached-1.4.8.tar.gz
 bin-directory = ${buildout:bin-directory}
 extra_options = --bindir=${:bin-directory}
-environment =
-    CFLAGS=-I${libevent:location}/include
-    LDFLAGS=-L${libevent:location}/lib
+#environment =
+#    CFLAGS=-I${libevent:location}/include
+#    LDFLAGS=-L${libevent:location}/lib
 
 [libmemcached]
 recipe = zc.recipe.cmmi
