--- a/cfgs/versions.cfg
+++ b/cfgs/versions.cfg
@@ -1,9 +1,6 @@
 [buildout]
 extends =
-  zopeapp-versions.cfg
-  ztk-versions.cfg
-  zope-versions.cfg
-  plone-versions.cfg
+  http://dist.plone.org/release/4.3.7/versions.cfg
 
 find-links =
     http://dist.jarn.com/public
@@ -15,18 +12,16 @@ find-links =
 ## Overrides
 PIL = 1.1.7-jarn1
 # More memory efficient DateTime
-DateTime = 3.0
+#DateTime = 3.0
 # Kept in sync with value in fabfile
-distribute = 0.6.21
+#distribute = 0.6.21
 # Chameleon
-zope.pagetemplate = 3.6.3
-zope.tal = 3.6.0
 # Newer buildout to support python -o mode
 docutils = 0.8.1
 zc.buildout = 1.5.3-jarn1
-zc.recipe.egg = 1.3.2
+#zc.recipe.egg = 1.3.2
 # Fix problem in ZMI CSS screens
-Products.ResourceRegistries = 2.0.7-jarn1
+#Products.ResourceRegistries = 2.0.7-jarn1
 
 ## Buildout / server infrastructure
 buildout.extensionscripts = 1.0
@@ -69,30 +64,32 @@ dataflake.cache = 1.2
 archetypes.markerfield = 1.0
 BeautifulSoup = 3.2.0
 Chameleon = 2.6.2
-collective.autopermission = 1.0b1
-collective.indexing = 2.0a3
-collective.js.jqueryui = 1.8.13.1
-collective.quickupload = 1.2.1-jarn1
+collective.autopermission = 1.0b2
+collective.indexing = 2.0b1
+collective.js.jqueryui = 1.9.2.0
+collective.quickupload = 1.8.0
 collective.subtractiveworkflow = 2.0b1
-collective.z3cform.datetimewidget = 1.0.4
+collective.z3cform.datetimewidget = 1.2.7
 experimental.btree = 1.1
 five.pt = 2.2.0
-iw.rejectanonymous = 1.2.2
+iw.rejectanonymous = 1.2.3
 jarn.jsi18n = 0.2
 jarn.xmpp.collaboration = 0.1b2
 jarn.xmpp.core = 0.34
 jarn.xmpp.twisted = 0.1
 ordereddict = 1.1
 plone.formwidget.autocomplete = 1.2.0-jarn2
-plone.principalsource = 1.0b1
+plone.principalsource = 1.0
 plutonian = 0.1a3
 Products.DataGridField = 1.8b2
 Products.DocFinderTab = 1.0.5
 Products.PloneInvite = 2.0a2-jarn1
-Products.PloneFormGen = 1.6.5
+Products.PloneFormGen =  1.7.17
 Products.PythonField = 1.1.3
 Products.TALESField = 1.1.3
 Products.TemplateFields = 1.2.5
+ua-parser = 0.5.0
+pyyaml = 3.11
 pylibmc = 1.2.1
 RelStorage = 1.5.1
 rwproperty = 1.0
@@ -104,10 +101,7 @@ z3c.jbot = 0.6.3
 z3c.blobfile = 0.1.5
 z3c.pt = 2.1.5
 z3c.unconfigure = 1.0.1
-collective.flowplayer = 3.1.1
-hachoir-parser = 1.3.4 
+collective.flowplayer = 4.2.1
+hachoir-parser = 1.3.4
 hachoir-metadata = 1.3.3
 hachoir-core = 1.3.3
-Products.PloneHotfix20121106 = 1.2
-Products.PloneHotfix20130618 = 1.3.1
-Products.PloneHotfix20131210 = 1.0
