--- a/cfgs/versions.cfg
+++ b/cfgs/versions.cfg
@@ -11,14 +11,9 @@ find-links =
 [versions]
 ## Overrides
 PIL = 1.1.7-jarn1
-# More memory efficient DateTime
-#DateTime = 3.0
-# Kept in sync with value in fabfile
-#distribute = 0.6.21
-# Chameleon
-# Newer buildout to support python -o mode
 docutils = 0.8.1
-zc.buildout = 1.5.3-jarn1
+zc.buildout =
+setuptools =
 #zc.recipe.egg = 1.3.2
 # Fix problem in ZMI CSS screens
 #Products.ResourceRegistries = 2.0.7-jarn1
@@ -30,7 +25,7 @@ collective.recipe.grp = 0.1
 collective.recipe.omelette = 0.12
 collective.recipe.patch = 0.2.2
 collective.recipe.template = 1.8
-collective.xmltestreport = 1.0b3
+collective.xmltestreport =  1.3.3
 coverage = 3.5.1
 gocept.munin = 0.1
 gocept.recipe.env = 1.0
@@ -95,7 +90,7 @@ rwproperty = 1.0
 sourcecodegen = 0.6.14
 Twisted = 10.2.0
 venusian = 0.6
-wokkel = 0.6.4-jarn.xmpp-1
+wokkel = 0.6.4
 z3c.jbot = 0.6.3
 z3c.blobfile = 0.1.5
 z3c.pt = 2.1.5
