--- a/cfgs/versions.cfg
+++ b/cfgs/versions.cfg
@@ -44,6 +44,8 @@ superlance = 0.5
 supervisor = 3.0a10
 z3c.recipe.usercrontab = 1.1
 zc.recipe.cmmi = 1.3.4
+plone.recipe.zope2instance = 4.2.5
+# Ticket #13414 (confirmed Bug) 
 
 #ldap stuff
 plone.app.ldap = 1.2.7
