ping zope2 instance

--- a/cfgs/versions.cfg
+++ b/cfgs/versions.cfg
@@ -27,6 +27,9 @@ zc.buildout = 1.5.3-jarn1
 zc.recipe.egg = 1.3.2
 # Fix problem in ZMI CSS screens
 Products.ResourceRegistries = 2.0.7-jarn1
+plone.recipe.zope2instance = 4.2.5
+# Ticket #13414 (confirmed Bug) 
+
 
 ## Buildout / server infrastructure
 buildout.extensionscripts = 1.0
