--- a/cfgs/versions.cfg
+++ b/cfgs/versions.cfg
@@ -28,7 +28,9 @@ zc.recipe.egg = 1.3.2
 # Fix problem in ZMI CSS screens
 Products.ResourceRegistries = 2.0.7-jarn1
 plone.recipe.zope2instance = 4.2.5
-# Ticket #13414 (confirmed Bug) 
+
+# Ticket #13414 (confirmed Bug)
+plone.recipe.zope2instance = 4.2.5
 
 
 ## Buildout / server infrastructure
